[css-grid] Reset previously resolved auto-margins before layout

We resolve any auto-margin during the execution of the Grid logic logic.
Even though we compute them again if there is any change requiring to
perform a new layout, the previously resolved auto-margins may affect
the track sizing computation for content-sized (eg. auto) tracks.

We must set to 0 any previously resolved auto-margin before executing the
layout logic to avoid getting wrong values from the tracks sizing
algorithm.

Bug: 776581
Change-Id: I3a18819feed44d856c3a80d15e387721872b5f98